# mc-proxy

./: .ignore  Cargo.toml  README.md  build.rs  flake.nix  install.sh
src/: main.rs
src/mincraft_server/: mod.rs
src/packets/: mod.rs
src/packets/clientbound/: login.rs  status.rs
src/packets/serverbound/: handshake.rs  status.rs
src/types/: mod.rs
