[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["zerocopy"] }
serde = "1.0.218" 
serde_derive = "1.0.218"
serde_json = "1.0.140"
